samples/weather-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: openweather-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: openweather
spec:
  hosts:
  - "*"
  gateways:
  - openweather-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: weathermapweb
        port:
          number: 3000
